environments/dev/.terragrunt-cache/R0JB6FmCVYwMhrcKiSXcpE8ed9o/rcPxYMxixTBO08xZYxjNblXXmwQ/modules/loadbalancer/main.tf
resource "aws_alb" "main" {
  name            = "cloud-devops-alb"
  internal           = false
  subnets         = var.alb_subnets #aws_subnet.public.*.id
  security_groups = [aws_security_group.lb.id]

  depends_on = [ aws_security_group.lb ]
}

# ALB Security Group: Edit to restrict access to the application
resource "aws_security_group" "lb" {
  name        = "cloud-devops-sg"
  description = "controls access to the ALB"
  vpc_id      = var.vpc_id

  ingress {
    protocol    = "tcp"
    from_port   = 80
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    protocol    = "tcp"
    from_port   = 8080
    to_port     = 8080
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    protocol    = "tcp"
    from_port   = 3000
    to_port     = 3000
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
   protocol         = "tcp"
   from_port        = 443
   to_port          = 443
   cidr_blocks      = ["0.0.0.0/0"]
  #  ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}



output "load_balancer_arn" {
  value = aws_alb.main.arn
}

output "load_balancer_sg" {
  value = aws_security_group.lb.id
}
